--- a/lesrecetpg/css/main.css
+++ b/lesrecetpg/css/main.css
@@ -258,7 +258,10 @@ label {
 /* Button plus */
 
 .button_plus{
-    background-image: url(https//:picsum.photos/20/30); /*'../images/plus1.png'*/
+    background-image: url(../images/plus1.png); /*'../images/plus1.png'*/
+    background-size : cover;
+    background-color: transparent;
+    margin-left: 3px;
     width: 25px;
     height: 25px;
     padding: 0;
